cabal-version:      3.0
name:               version-runs
version:            0.1.0.0
license:            NONE
author:             Phil de Joux
maintainer:         philderbeast@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md
common warnings
    ghc-options: -Wall

executable version-range-addrev
    import:           warnings
    main-is:          Main.hs
    build-depends:
          base ^>=4.20.0.0
        , pretty
    hs-source-dirs:   app
    default-language: Haskell2010
